--- a/mean/src/app/header/header.component.html
+++ b/mean/src/app/header/header.component.html
@@ -38,7 +38,7 @@
                   <ul id="navigation">
                     <li><a class="active" href="/">หน้าหลัก</a></li>
                     <li><a href="/travel">รีวิวสถานที่ท่องเที่ยว</a></li>
-                    <li><a class="" href="/popular">สถานที่ท่องเที่ยวที่น่าสนใจ</a>
+                    <li><a class="" href="/mytravel">รีวิวของฉัน</a>
                     </li>
                   </ul>
                 </nav>
