--- a/mean/src/app/createpost/createpost.component.html
+++ b/mean/src/app/createpost/createpost.component.html
@@ -17,9 +17,9 @@
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1"><h4>เนื้อหา</h4></label>
-            <textarea class="form-control" rows="8" #detail></textarea>
+            <textarea class="form-control" rows="8" #traveldetail></textarea>
         </div>
-        <button type="button" class="btn btn-primary" (click)="onSubmit(title.value, detail.value)">Post</button>
+        <button type="button" class="btn btn-primary" (click)="onSubmit(title.value, traveldetail.value)">Post</button>
     </div><br><br><br><br>
 </div>
 
